<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_legacy_dagger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_legacy_dagger"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_legacy_dagger_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_legacy_dagger_android"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_legacy_dagger_hilt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_legacy_dagger_hilt"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="120dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_compose_dagger"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_compose_dagger"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_compose_dagger_android"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_compose_dagger_android"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_compose_dagger_hilt"
        android:backgroundTint="?attr/colorSecondary"
        android:textColor="?attr/colorOnSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_compose_dagger_hilt"/>
</LinearLayout>
